# absolute_zero

./: .gitignore  README.md  absolute_zero.py  azr_executor.py  azr_executor_worker.py  azr_prompts.py  code_review.md  design_doc.md  pyproject.toml  test.py  test_azr_env.py
azr_utils/: azr_buffers.py  azr_executor.py  azr_logging.py  azr_parser.py  azr_worker.py
outputs/evals/absolute_zero--gpt-4.1-mini/5864188d/: metadata.json  results.jsonl
outputs/evals/absolute_zero--gpt-4.1-mini/b32ac465/: metadata.json  results.jsonl
